# pokemon-sprite-compression

./: Cargo.toml  readme.md
doc/: gen2.txt
src/: gen1.rs  gen2.rs  lib.rs
